ONE PAGE ALL PAIS DYNAMIC

--- a/ArsaRExCH/Components/MyComponents/PropComponentss/BTCUSDTP.razor
+++ b/ArsaRExCH/Components/MyComponents/PropComponentss/BTCUSDTP.razor
@@ -1,7 +1,7 @@
 ﻿@page "/Prepetual/{hash}/{Pair}"
 @rendermode InteractiveServer
 <h3>BTCUSDTP</h3>
-<BtcPricePrepetual>
+<BtcPricePrepetual Pairs="@Pair">
     <Myc HashFllag="@hash" Pair="@Pair"></Myc>
 </BtcPricePrepetual>
 
